Random Shield Button now working. Sparren added.

--- a/heraldik/templates/heraldik/index.html
+++ b/heraldik/templates/heraldik/index.html
@@ -35,7 +35,8 @@
         
         <div id="exampleContainer">
             <div id="exampleShield-div">
-                <img id="exampleShield" src="{% static 'heraldik/images/example.jpg' %}"/>
+                <!-- <img id="exampleShield" src="{% static 'heraldik/images/example.jpg' %}"/> -->
+                <img id="exampleShield" src="http://wappen.khi.fi.it/Plone/bilder/thumbs/flb000001_0093.jpg/image"/>
             </div>
             <div id="getRandomShieldButton-div">
                 <button id="getRandomShieldButton">Neue Aufgabe</button>
