--- a/heraldik/templates/heraldik/index.html
+++ b/heraldik/templates/heraldik/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="allContainer">
         <div id="headerContainer">
-            <h1>Blasonierungsübung</h1>
+            <h2>Blasonierungsübung</h2>
         </div>
         <div id="userinputContainer">
             <div id="gibblason-div">
@@ -24,6 +24,7 @@
             </div>
             <div id="updateBlaz-div">
                 <button id="updateBlaz">Überprüfe Blasonierung</button>
+                <button id="getclue">Tipp</button>
             </div>
         </div>
         
@@ -36,10 +37,11 @@
         <div id="exampleContainer">
             <div id="exampleShield-div">
                 <!-- <img id="exampleShield" src="{% static 'heraldik/images/example.jpg' %}"/> -->
-                <img id="exampleShield" src="http://wappen.khi.fi.it/Plone/bilder/thumbs/flb000001_0093.jpg/image"/>
+                <img id="exampleShield" src="http://wappen.khi.fi.it/Plone/bilder/thumbs/flb000001_0155.jpg/image"/>
             </div>
             <div id="getRandomShieldButton-div">
                 <button id="getRandomShieldButton">Neue Aufgabe</button>
+                <button id="getSource">Quelle</button>
             </div>
         </div>
     </div>
