--- a/static_local/heraldik/style.css
+++ b/static_local/heraldik/style.css
@@ -84,10 +84,20 @@ textarea {
 
 #updateBlaz {
     height: 90%;
-    width: 90%;
+    width: 70%;
     position: absolute;
     top: 5%;
     left: 5%;
+    right: 5%;
+    bottom: 5%;
+}
+
+#getclue {
+    height: 90%;
+    width: 20%;
+    position: absolute;
+    top: 5%;
+    left: 75%;
     right: 5%;
     bottom: 5%;
 }
@@ -134,10 +144,20 @@ textarea {
 
 #getRandomShieldButton {
     height: 90%;
-    width: 90%;
+    width: 75%;
     position: absolute;
     top: 5%;
-    left: 5%;
+    left: 0%;
     right: 5%;
+    bottom: 5%;
+}
+
+#getSource {
+    height: 90%;
+    width: 25%;
+    position: absolute;
+    top: 5%;
+    left: 75%;
+    right: 0%;
     bottom: 5%;
 }
