Solution button implemented.

--- a/heraldik/templates/heraldik/index.html
+++ b/heraldik/templates/heraldik/index.html
@@ -42,11 +42,12 @@
         </div>
         <div id="buttonContainer">
             <div id="updateBlaz-div">
-                <button id="updateBlaz">Aktualisiere Blasonierung</button>
+                <button id="updateBlaz">Aktualisieren</button>
                 <button id="getclue">Tipp</button>
             </div>
             <div id="solution-div">
-                <button id="getSolution">Kontrolle</button>
+                <button id="getControl">Kontrolle</button>
+                <button id="getSolution">Lösung</button>
             </div>
             <div id="getRandomShieldButton-div">
                 <button id="getRandomShieldButton">Neue Aufgabe</button>
