Added temporary search word add function.

--- a/linking/templates/linking/index.html
+++ b/linking/templates/linking/index.html
@@ -73,8 +73,10 @@
         </div>
         <div id="rightContainer">
             <div id="contextContainer">
-                <h3 id="fullstring"/>
-                <h5 id="signalList"/>
+                <h3 id="fullstring">Kontextfenster</h3>
+                <h5 id="signalList">Suchwörter</h5>
+                <input class="tempSignal" id="tempSignalEntry" type="text" name="tempSignal">
+                <button id="addTempSignal">Füge Suchwort hinzu</button>
             </div>
             <div id="foundEntryContainer">
             </div>
