--- a/static/linking/style.css
+++ b/static/linking/style.css
@@ -26,19 +26,19 @@ body {
     background-color: lightblue;
 }
 
-#xmlinputfield {
+.xmlinputfield {
     width: 100%;
     height: 80%;
 }
 
-#pubyear {
+.pubyear {
     margin: 1%;
     width: 48%;
     height: 16%;
     float: left;
 }
 
-#run {
+.run {
     margin: 1%;
     width: 48%;
     height: 16%;
