Test Transkribus Remote Login and Document Selection.

--- a/linking/templates/linking/index.html
+++ b/linking/templates/linking/index.html
@@ -61,6 +61,16 @@
                                 <td><button class="login" id="TKlogin">Login</button></td>
                             </tr>
                             <tr>
+                                <td><select id="coll_select" class="select_box">
+                                    <option value="None">Wähle Collection</option>
+                                </select></td>
+                            </tr>
+                            <tr>
+                                <td><select id="doc_select" class="select_box">
+                                    <option value="None">Wähle Dokument</option>
+                                </select></td>
+                            </tr>
+                            <tr>
                                 <td><input id="pubyearTK" class="pubyear" type="number" name="pubyear" step="1" min="0" max="2000"></td>
                                 <td><button class="run" id="runTK">Start</button></td>
                             </tr>
