--- a/linking/templates/linking/index.html
+++ b/linking/templates/linking/index.html
@@ -16,7 +16,7 @@
             for (i = 0; i < tablinks.length; i++) {
                 tablinks[i].className = tablinks[i].className.replace(" active", "");
             }
-            document.getElementById(inputName).style.display = "block";
+            document.getElementById(inputName).style.display = "flex";
             evt.currentTarget.className += " active";
         }
     </script>
@@ -47,15 +47,15 @@
                 </div>
 
                 <div id="transkribus" class="tabcontent" style="display: none">
-                    <table>
-                        <td>
+                    <div id="transkribusTable">
+                        <table>
                             <tr>
-                                <td><label for="username">Username:</label></td>
-                                <td><input type="text" id="username" name="username"></td> 
+                                <td><label for="username">Username:</label>
+                                <input type="text" id="username" name="username"></td> 
                             </tr>
                             <tr>
-                                <td><label for="pass">Password:</label></td>
-                                <td><input type="password" id="pass" name="password"></td>
+                                <td><label for="pass">Password:</label>
+                                <input type="password" id="pass" name="password"></td>
                             </tr>
                             <tr>
                                 <td><button class="login" id="TKlogin">Login</button></td>
@@ -71,11 +71,12 @@
                                 </select></td>
                             </tr>
                             <tr>
-                                <td><input id="pubyearTK" class="pubyear" type="number" name="pubyear" step="1" min="0" max="2000"></td>
-                                <td><button class="run" id="runTK">Start</button></td>
-                            </tr>
-                        </td>
-                    </table>
+                                <td><input id="pubyearTK" class="pubyear" type="number" name="pubyear" step="1" min="0" max="2000">
+                                <button class="run" id="runTK">Start</button></td>
+                            </tr>         
+                        </table>
+                    </div>
+                    <div id="showXMLText"></div>
                 </div>
             </div>
 
