--- a/static/linking/style.css
+++ b/static/linking/style.css
@@ -190,3 +190,21 @@ table {
     width: 100%;
     height: 90%;
 }
+
+#transkribusTable {
+    height: 100%;
+    width: 50%;
+    display: flex;
+}
+
+#showXMLText {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    float: right;
+    overflow-y: scroll;
+}
+
+#transkribus {
+    display: flex;
+}
