--- a/linking/templates/linking/index.html
+++ b/linking/templates/linking/index.html
@@ -67,8 +67,12 @@
                             </tr>
                             <tr>
                                 <td><select id="doc_select" class="select_box">
-                                    <option value="None">Wähle Dokument</option>
-                                </select></td>
+                                    <option value="None">Wähle Dokument</option></select>
+                                    <label for="page_select">Seite:</label>
+                                    <select id="page_select" class="select_box">
+                                        <option value="None">Wähle Seite</option>
+                                    </select>
+                                </td>
                             </tr>
                             <tr>
                                 <td><input id="pubyearTK" class="pubyear" type="number" name="pubyear" step="1" min="0" max="2000">
