Login message implemented. Fallback for empty TextRegions implemented. Changed view of collections and documents to sorted by document name.

--- a/linking/templates/linking/index.html
+++ b/linking/templates/linking/index.html
@@ -58,7 +58,8 @@
                                 <input type="password" id="pass" name="password"></td>
                             </tr>
                             <tr>
-                                <td><button class="login" id="TKlogin">Login</button></td>
+                                <td><button class="login" id="TKlogin">Login</button>
+                                <label id="login_response"></label></td>
                             </tr>
                             <tr>
                                 <td><select id="coll_select" class="select_box">
