Fixed layout of the input field for PageXML and TEI.

--- a/linking/templates/linking/index.html
+++ b/linking/templates/linking/index.html
@@ -16,7 +16,7 @@
             for (i = 0; i < tablinks.length; i++) {
                 tablinks[i].className = tablinks[i].className.replace(" active", "");
             }
-            document.getElementById(inputName).style.display = "flex";
+            document.getElementById(inputName).style.display = "block";
             evt.currentTarget.className += " active";
         }
     </script>
