Context Update. Also some UI enhancements (colors up for discussion).

--- a/linking/templates/linking/index.html
+++ b/linking/templates/linking/index.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
 
-            <div id="controlsContainer">
+            <div id="controlsContainer" class="changeOnType">
                 <div class="row">
                     <div class="col">
                         <div id="smaller">
@@ -140,9 +140,9 @@
             </div>
         </div>
         <div id="rightContainer">
-            <div id="contextContainer">
-                <h3 id="fullstring">Kontextfenster</h3>
-                <h5 id="signalList">Suchwörter</h5>
+            <div id="contextContainer" class="changeOnType">
+                <p id="fullstring">Kontextfenster</p>
+                <p id="signalList">Suchwörter</p>
                 <input class="tempSignal" id="tempSignalEntry" type="text" name="tempSignal">
                 <button id="addTempSignal">Füge Suchwort hinzu</button>
             </div>
