PageXML can now create database dummies.

--- a/linking/templates/linking/index.html
+++ b/linking/templates/linking/index.html
@@ -115,6 +115,7 @@
                 <div class="row">
                     <div class="col">
                         <div id="smaller">
+<!--
                             <table>
                                 <tr>
                                     <td class="ctrlTitle" colspan="4">Melde fehlenden Eintrag</td>
@@ -129,6 +130,20 @@
                                     <td>Gemeldet von:</td>
                                     <td><input class="missingEntry" id="submittedByEntry" type="text" name="submittedBy"></td>
                                     <td colspan="2"><button id="missingEntry">Melden</button></td>
+                                </tr>
+                            </table>
+-->
+                            <table>
+                                <tr>
+                                    <td class="ctrlTitle" colspan="2">Ergänze fehlenden Eintrag</td>
+                                </tr>
+                                <tr>
+                                    <td>Name:</td>
+                                    <td><input class="missingEntry" id="missingName" type="text" name="missingName"></td>
+                                </tr>
+                                <tr>
+                                    <td/>
+                                    <td><button id="missingEntry">Eintrag erstellen und Entität damit verlinken</button></td>
                                 </tr>
                             </table>
                         </div>
