Fixed bug which deleted existing ref-elements.

--- a/linking/templates/linking/index.html
+++ b/linking/templates/linking/index.html
@@ -29,9 +29,13 @@
         <div id="leftContainer">
             <div id="inputContainer">
                 <div class="tab">
-                  <button class="tablinks" onclick="openInput(event, 'pageXML')">PageXML</button>
-                  <button class="tablinks" onclick="openInput(event, 'tei')">TEI</button>
-                  <button class="tablinks" onclick="openInput(event, 'transkribus')">Transkribus</button>
+                    <button class="tablinks" onclick="openInput(event, 'pageXML')">PageXML</button>
+                    <button class="tablinks" onclick="openInput(event, 'tei')">TEI</button>
+                    <button class="tablinks" onclick="openInput(event, 'transkribus')">Transkribus</button>
+                    <select id="db_select" class="select_box">
+                        <option value="ssrq" selected>SSRQ</option>
+                        <option value="gnd">GND</option>
+                    </select>
                 </div>
 
                 <div id="pageXML" class="tabcontent">
@@ -88,7 +92,7 @@
             <div id="controlsContainer" class="changeOnType">
                 <div class="row">
                     <div class="col">
-                        <div id="smaller">
+                        <div class="smaller">
                             <table>
                                 <tr>
                                     <td class="ctrlTitle" colspan="2">Füge Normalisierte Namen hinzu</td>
@@ -114,25 +118,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <div id="smaller">
-<!--
-                            <table>
-                                <tr>
-                                    <td class="ctrlTitle" colspan="4">Melde fehlenden Eintrag</td>
-                                </tr>
-                                <tr>
-                                    <td>Urkunde:</td>
-                                    <td><input class="missingEntry" id="documentEntry" type="text" name="documentEntry"></td>
-                                    <td>Link (optional):</td>
-                                    <td><input class="missingEntry" id="refLinkEntry" type="text" name="refLink"></td>
-                                </tr>
-                                <tr>
-                                    <td>Gemeldet von:</td>
-                                    <td><input class="missingEntry" id="submittedByEntry" type="text" name="submittedBy"></td>
-                                    <td colspan="2"><button id="missingEntry">Melden</button></td>
-                                </tr>
-                            </table>
--->
+                        <div class="smaller" id="missingEntryContainer">
                             <table>
                                 <tr>
                                     <td class="ctrlTitle" colspan="2">Ergänze fehlenden Eintrag</td>
