--- a/dorsual/templates/index.html
+++ b/dorsual/templates/index.html
@@ -8,13 +8,52 @@
 		<title>Dorsualnotizen-Checker</title>
 		
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/openseadragon@2.4/build/openseadragon/openseadragon.min.js"></script>
 		<script type="text/javascript" src="{% static 'dorsual/functions.js' %}"></script>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	</head>
 	<body>
-		<h1>HELLO WORLD</h1>
-		<div id="openseadragon1" style="width: 800px; height: 600px;"></div>
+		<div class="container-fluid text-light">
+		  	<div class="row bg-secondary p-4">
+		  		<div class="col">
+		  			<form id="loginForm" class="form-inline">
+					  	<label for="email" class="mr-sm-2">Email-Adresse:</label>
+					  	<input type="email" class="form-control mb-2 mr-sm-2" id="email" name="email">
+					  	<label for="pwd" class="mr-sm-2">Passwort:</label>
+					  	<input type="password" class="form-control mb-2 mr-sm-2" id="pwd" name="pwd">
+					  	<button type="button" id="loginBtn" class="btn btn-primary mb-2">Login</button>
+					</form> 
+		  		</div>
+		  		<div class="col">
+		  			<form id="filterForm" class="form-inline">
+			  			<select id="coll_select" name="coll" class="form-control mb-2 mr-sm-2 col-4">
+	                        <option value="None" selected disabled>Einloggen zum Wählen der Collection</option>
+	                    </select>
+			  			<select id="dorsNote" name="dorsualNotizFilter" class="form-control mb-2 mr-sm-2">
+	                        <option value="None" disabled selected>Wähle Notiztyp</option>
+	                        <option value="">Kein Typ</option>
+	                        <option value="All">Alle Typen</option>
+	                        <option value="Dorsual_Regesta">Regesta</option>
+	                        <option value="Dorsual_Sigle">Sigle</option>
+	                        <option value="Dorsual_StAAG">StAAG</option>
+	                        <option value="Dorsual_StAAG-Stempel">StAAG-Stempel</option>
+	                        <option value="Dorsual_Textualis">Textualis</option>
+	                    </select>
+	                    <button type="button" id="goBtn" class="btn btn-primary mb-2 mr-sm-2">Los!</button>
+	                    <select id="alreadyProcessed" name="alreadyProcessedFilter" class="form-control mb-2 mr-sm-2">
+	                        <option value="not_checked_only" selected>Ignoriere schon korrigierte</option>
+	                        <option value="all">Zeige alle</option>
+	                        <option value="checked_only">Zeige nur korrigierte</option>
+	                        <option value="correct_only">Zeige nur korrekte</option>
+	                        <option value="wrong_only">Zeige nur falsche</option>
+	                    </select>
+		            </form>
+		  		</div>
+		  	</div>
+
+		  	<div class="row">
+		  		<div class="col" id="container"></div>
+		  	</div>
+		</div>
 	</body>
 </html>
 
