Fixes and extensions of functionalities

--- a/dorsual/templates/index.html
+++ b/dorsual/templates/index.html
@@ -37,17 +37,42 @@
 	                        <option value="None" disabled selected>Wähle Notiztyp</option>
 	                        <option value="">Kein Typ</option>
 	                        <option value="All">Alle Typen</option>
-	                        <option value="Dorsual_Jahreszahl-Eins">Jahreszahl 1</option>
-	                        <option value="Dorsual_Jahreszahl-Zwei">Jahreszahl 2</option>
-	                        <option value="Dorsual_Jahreszahl-Drei">Jahreszahl 3</option>
-	                        <option value="Dorsual_Jahreszahl-Vier">Jahreszahl 4</option>
-	                        <option value="Dorsual_Nummer">Nummer</option>
+				<option value="Archivbeschriftung">Archivbeschriftung divers</option>
+				<option value="Auftakt">Auftaktzeichen</option>
+				<option value="Brief">Brief</option>
+				<option value="Datierung_divers">Datierung divers</option>
+				<option value="Datierung_Urkunde">Datierung Urkundenwortlaut</option>
+				<option value="Doppel">Doppelaufstrich</option>
+				<option value="Eckig">Eckig</option>
+				<option value="Fricker">Fricker</option>
+				<option value="Dorsual_Jahreszahl-Eins">Zahl (1)</option>
+	                        <option value="Dorsual_Jahreszahl-Zwei">Zahl (2)</option>
+	                        <option value="Dorsual_Jahreszahl-Drei">Jahreszahl dreistellig</option>
+	                        <option value="Dorsual_Jahreszahl-Vier">Jahreszahl vierstellig</option>
+				<option value="Kanzleihand">Kanzleihand-Hofmeisterei</option>
+				<option value="Kopie">Kopieverweis</option>
+				<option value="Kurrent">Kurrent</option>
+				<option value="Latein_1">Latein</option>
+				<option value="Latein_3">Latein divers</option>
+				<option value="Latein_2">Latein Franziskaner</option>
+				<option value="Lokatur">Lokaturverweis</option>
+				<option value="Notariat">Notariatsvermerk Papsturkunden</option>
+				<option value="Dorsual_Nummer">Nummer</option>
+				<option value="Rechnungsbuch">Rechnungsbuch-Hofmeister</option>
 	                        <option value="Dorsual_Regesta">Regesta</option>
-	                        <option value="Dorsual_Sigle">Sigle</option>
-	                        <option value="Dorsual_StAAG">StAAG</option>
-	                        <option value="Dorsual_StAAG-Stempel">StAAG-Stempel</option>
-	                        <option value="Dorsual_Textualis">Textualis</option>
-	                    </select>
+				<option value="Schraeg">Schräg, regelmässig</option>
+	                        <option value="Dorsual_Sigle">Sigle Bern</option>
+				<option value="Speziell">Speziell</option>
+				<option value="StAAG_modern">StAAG modern</option>
+	                        <option value="Dorsual_StAAG">StAAG Signatur</option>
+	                        <option value="Dorsual_StAAG-Stempel">StAAG Stempel</option>
+				<option value="Dorsual_Textualis">Textualis, Orte und Siglen</option>
+				<option value="uber_1">ùber (Besitz Agnes)</option>
+				<option value="uber_2">ùber (Nicht Besitz Agnes)</option>
+				<option value="uber_3">ùber nach 1380</option>
+				<option value="Unleserlich">Unleserlich</option>
+				<option value="Unsicher">Unsicher</option>
+			</select>
 	                    <button type="button" id="goBtn" class="btn btn-primary mb-2 mr-sm-2">
 	                    	<span id="loadingSpinner"></span>
 	                    	Los!
