HGA Stempel hinzugefügt.

--- a/dorsual/templates/index.html
+++ b/dorsual/templates/index.html
@@ -45,6 +45,7 @@
 				<option value="Doppel">Doppelaufstrich</option>
 				<option value="Eckig">Eckig</option>
 				<option value="Fricker">Fricker</option>
+				<option value="HGA_Stempel">HGA Stempel</option>
 				<option value="Dorsual_Jahreszahl-Eins">Zahl (1)</option>
 	                        <option value="Dorsual_Jahreszahl-Zwei">Zahl (2)</option>
 	                        <option value="Dorsual_Jahreszahl-Drei">Jahreszahl dreistellig</option>
