Sammelschicht nach 1600 hinzugefügt.

--- a/dorsual/templates/index.html
+++ b/dorsual/templates/index.html
@@ -60,9 +60,10 @@
 				<option value="Notariat">Notariatsvermerk Papsturkunden</option>
 				<option value="Dorsual_Nummer">Nummer</option>
 				<option value="Rechnungsbuch">Rechnungsbuch-Hofmeister</option>
-	                        <option value="Dorsual_Regesta">Regesta</option>
+				<option value="Dorsual_Regesta">Regesta</option>
+				<option value="Sammelschicht_nach">Sammelschicht nach 1600</option>
 				<option value="Schraeg">Schräg, regelmässig</option>
-	                        <option value="Dorsual_Sigle">Sigle Bern</option>
+	            <option value="Dorsual_Sigle">Sigle Bern</option>
 				<option value="Speziell">Speziell</option>
 				<option value="StAAG_modern">StAAG modern</option>
 	                        <option value="Dorsual_StAAG">StAAG Signatur</option>
